--- a/index.html
+++ b/index.html
@@ -77,18 +77,57 @@
         </div>
     </section>
     <section id="gallery-flash" class="gallery-flash">
-        <div>
+        <video autoplay muted loop id="myVideo">
+            <source src="img/background-gallery-flash.mp4" type="video/mp4">
+            Your browser does not support HTML5 video.
+        </video>
+        <div class="gallery-flash__title">
             <h2>Gallery</h2>
         </div>
-        <div class="gallery-flash__wrapper">
-            <div class="gallery-flash__wrapper--box-img">
-                <img src="" alt="">
-                <div>
-                    <p>Low description</p>
+        <article>
+            <div class="gallery-flash__wrapper">
+                <div class="gallery-flash__box-img">
+                    <div class="gallery-flash__picture">
+                        <img src="img/img-gallery-1.png" alt="">
+                    </div>
+                    <div class="gallery-flash__pic-description">
+                        <p>The Flash By Geoff Johns</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </article>
+        <article>
+            <div class="gallery-flash__wrapper">
+                <div class="gallery-flash__box-img">
+                    <div class="gallery-flash__picture">
+                        <img src="img/img-gallery-1.png" alt="">
+                    </div>
+                    <div class="gallery-flash__pic-description">
+                        <p>The Flash By Geoff Johns</p>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="gallery-flash__wrapper">
+                <div class="gallery-flash__box-img">
+                    <div class="gallery-flash__picture">
+                        <img src="img/img-gallery-1.png" alt="">
+                    </div>
+                    <div class="gallery-flash__pic-description">
+                        <p>The Flash By Geoff Johns</p>
+                    </div>
+                </div>
+            </div>
+        </article>
+        
     </section>
     
 </body>
 </html>
+
+<!--
+div pai: 1085
+div filho: 351
+espaço: 10
+-->
