correcao de path

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <title>Document</title>
 <link rel="stylesheet" href="css/style.css">
 
-<link rel="stylesheet" href="css/all.css">
-<link rel="stylesheet" href="css/brands.css">
-<link rel="stylesheet" href="css/solid.css">
+<link rel="stylesheet" href="assets/css/all.css">
+<link rel="stylesheet" href="assets/css/brands.css">
+<link rel="stylesheet" href="assets/css/solid.css">
 
 <script src="js/script.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
