--- a/index.html
+++ b/index.html
@@ -120,14 +120,39 @@
                 </div>
             </div>
         </article>
-        
     </section>
     
+    <section id="fans-flash" class="fans-flash">
+        <div class="fans-flash__wrapper">
+            <div class="fans-flash__title">
+                <div>
+                    <p>What does the fans say about flash</p>
+                </div>
+                <div>
+                    <p>We supply clients across the entire globe
+                        with improved network connections.</p>
+                </div>
+            </div>
+            <div class="fans-flash__quote">
+                <div class="fans-flash__text">
+                    <span>"</span>
+                    <p>The Flash is an incredible show that captivates
+                         audiences with its electrifying action, 
+                         compelling storytelling, and phenomenal cast. 
+                         It's a true masterpiece of television!</p>
+                </div>
+                <div class="fans-flash__person">
+                    <div class="fans-flash__person--img-person">
+                        <img src="img/grant-gustin.png" alt="">
+                    </div>
+                    <div class="fans-flash__person--person-info">
+                        <p class="name">Thomas Grant Gustin</p>
+                        <p class="job">Actor & Singer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
-
-<!--
-div pai: 1085
-div filho: 351
-espaço: 10
--->
