--- a/index.html
+++ b/index.html
@@ -154,7 +154,74 @@
         </div>
     </section>
 
-    
+    <footer>
+        <div class="container">
+            <div class="logo-footer">
+                <i></i><a href="">logo</a>
+            </div>
+        </div>
+
+        <div class="footer-wrapper">
+            <div class="footer__box-left">
+                <h2>Feel the power of the Flash!</h2>
+                <p>
+                    We welcome your feedback and collaboration. 
+                    Reach out to us to harness the speed force or
+                    simply have a quick chat.
+                </p>
+                <button>Become a Client</button>
+                <p>Don’t like the forms? Drop us a line via email.</p>
+                <a href="@">wesleycrz@hotmail.com</a>
+            </div>
+            <div class="footer__box-right">
+                <div class="footer__navs">
+                    <div class="nav-col">
+                        <h3>Contact Us</h3>
+
+                        <ul>
+                            <li>
+                                "Our Email" 
+                                <br>
+                                "info@theflash.com"
+                            </li>
+                            <li>
+                                Our Phone
+                                (12)997568988
+                            </li>
+                            <li>Central City, USA - STAR Labs, 
+                                4th floor, 12345</li>
+                        </ul>
+
+                    </div>
+                    <div class="nav-col">
+                        <h3>Follow Us</h3>
+                        <ul>
+                            <li><a href="#">Dribble</a><i></i></li>
+                            <li><a href="#">linkedin</a><i></i></li>
+                            <li><a href="#">clutch</a><i></i></li>
+                            <li><a href="#">Instagram</a><i></i></li>
+                        </ul>
+                    </div>
+                    <div class="nav-col">
+                        <ul>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Development</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Reviews</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__end">
+                <p>
+                    © The Flash 2023. All rights reserved. 
+                    <a href="#">Privacy Policy</a>
+                </p>
+                <button>Back to Superspeed</button>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
