--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         Reach out to us to harness the speed force or
                         simply have a quick chat.
                     </p>
-                    <button>Become a Client</button>
+                    <button style="--clr:#fc1e1e"><span>Become a client</span><i></i></button>
                     <p>Don’t like the forms? Drop us a line via email.</p>
                     <a href="@">wesleycrz@hotmail.com</a>
                 </div>
@@ -178,9 +178,9 @@
     
                             <ul>
                                 <li>
-                                    "Our Email" 
+                                    Our Email
                                     <br>
-                                    "info@theflash.com"
+                                    info@theflash.com
                                 </li>
                                 <li>
                                     Our Phone
@@ -194,10 +194,10 @@
                         <div class="nav-col">
                             <h3>Follow Us</h3>
                             <ul>
-                                <li><a href="#">Dribble</a><i></i></li>
-                                <li><a href="#">linkedin</a><i></i></li>
-                                <li><a href="#">clutch</a><i></i></li>
-                                <li><a href="#">Instagram</a><i></i></li>
+                                <li><a href="#">Dribble <i class="fa-solid fa-up-right-from-square"></i></a></li>
+                                <li><a href="#">linkedin <i class="fa-solid fa-up-right-from-square"></i></a></li>
+                                <li><a href="#">clutch <i class="fa-solid fa-up-right-from-square"></i></a></li>
+                                <li><a href="#">Instagram <i class="fa-solid fa-up-right-from-square"></i></a></li>
                             </ul>
                         </div>
                         <div class="nav-col">
@@ -216,7 +216,8 @@
                         © The Flash 2023. All rights reserved. 
                         <a href="#">Privacy Policy</a>
                     </p>
-                    <button>Back to Superspeed</button>
+                    <a class="btn-totop" href="#">Back to Superspeed <i class="fa-solid fa-angles-up"></i></a>
+                    
                 </div>
             </div>
         </div>
