--- a/index.html
+++ b/index.html
@@ -202,11 +202,12 @@
                         </div>
                         <div class="nav-col">
                             <ul>
-                                <li><a href="#">Services</a></li>
+                                <li><a href="#">Begin</a></li>
                                 <li><a href="#">About</a></li>
-                                <li><a href="#">Development</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Reviews</a></li>
+                                <li><a href="#">Gallery</a></li>
+                                <li><a href="#">Villains</a></li>
+                                <li><a href="#">Contact</a></li>
+
                             </ul>
                         </div>
                     </div>
