hide menu e bugs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
+    <header id="begin-flash">
 
         <!--
         <div class="btn-menu">
@@ -47,11 +47,11 @@
                 <i class="fa-solid fa-xmark"></i>
             </div>
             <ul>
-                <li><a href="">Begin</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Villains</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#begin-flash">Begin</a></li>
+                <li><a href="#about-flash">About</a></li>
+                <li><a href="#gallery-flash">Gallery</a></li>
+                <li><a href="#fans-flash">Fans</a></li>
+                <li><a href="#contact-flash">Contact</a></li>
             </ul>
         </div>
         <div class="title-flash">
@@ -154,7 +154,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="contact-flash">
         <div class="container">
             <div class="logo-footer">
                 <i class="fa-solid fa-bolt"></i><a href="">Dive In</a>
