--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8"/>
-<title>Document</title>
+<title>The Flash</title>
 <link rel="stylesheet" href="css/style.css">
 
 <link rel="stylesheet" href="assets/css/all.css">
 <link rel="stylesheet" href="assets/css/brands.css">
 <link rel="stylesheet" href="assets/css/solid.css">
+<link rel="shortcut icon" type="imagex/png" href="img/shortcut.ico">
 
 <script src="js/script.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
